# algorithmic-trading

./: LICENSE  pyproject.toml
models/: model.pth
src/: app.py  utils.py
src/agent/: agent.py
src/game/: snake.py
src/model/: model.py
