[tool.poetry]
name = "algorithmic-trading"
version = "0.1.0"
description = ""
authors = ["davesanna <sanna.davide32@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.13.1"
numpy = "^1.22.4"
pandas = "^1.4.2"
matplotlib = "^3.5.2"
jupyterlab = "^3.4.3"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
pre-commit = "^2.19.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
